# tornado-gcm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-WEIGHTS  README.md  __init__.py  cli.py  open_source.md  pyproject.toml  scales.py  typing.py  units.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: sda_debug_fp32.yaml  sda_neuralgcm_0.7deg.yaml  sda_neuralgcm_1.4deg.yaml  sda_neuralgcm_2.8deg_full.yaml
core/: __init__.py  associated_legendre.py  coordinate_systems.py  filtering.py  fourier.py  hybrid_coordinates.py  layer_coordinates.py  primitive_equations.py  primitive_equations_states.py  scan_utils.py  sigma_coordinates.py  spherical_harmonic.py  time_integration.py  vertical_interpolation.py  weatherbench_utils.py
distributed/: __init__.py  ddp.py  dtensor_sharding.py
inference/: __init__.py  production.py  runner.py  sda_runner.py
model/: __init__.py  api.py  atmosphere.py  dynamic_data_forcing.py  jax_checkpoint_loader.py  legacy.py
neural/: __init__.py  coordinates.py  diagnostics.py  encoders_decoders.py  equations.py  features.py  field_utils.py  fixers.py  interpolators.py  mappings.py  neural_equations.py  normalizations.py  parameterizations.py  spatial_filters.py  spherical_harmonics.py  standard_layers.py  stochastic.py  towers.py  transformer_layers.py  transforms.py
precision/: __init__.py  benchmarks.py  hps_visualization.py  monitor.py  policy.py  profiler.py  scheduler.py  sda.py  sensitivity.py  zone_cast.py  zone_discovery.py
precision/accelerator/: __init__.py  compile_backend.py  fused_zone_cast.py  registry.py  triton_fixers.py  triton_sht.py
precision/sparse/: __init__.py  adaptive_sparse.py  ops.py  spectral_sparse.py
precision/storage/: __init__.py  codec.py  manager.py
training/: __init__.py  checkpointing.py  data_loading.py  data_pipeline.py  evaluation.py  losses.py  optimization.py  schedules.py  sda_trainer.py  trainer.py
